--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -188,6 +188,82 @@
 		</div>
 	</div>
 </div>
+
+
+
+
+
+
+
+  <div class="overlay-outer">
+  </div>
+  <div class="overlay-inner">
+  	<div class="conversionbox-outer">
+			<img src="/img/close.png" alt="Close-Button" class="close">
+			<div class="whitebg conversion-header">
+
+				<h4 class="headline-conversionbox info-icon">
+					Fordern Sie weitere Informationen an
+				</h4>
+			</div>
+			<div class="conversionbox-inner">  		
+				<div class="checkbox-box">
+					<input type="checkbox" name="newsletter" id="newsletter" value="yes">
+					<label for="newsletter" class="checkboxLabel">
+						Ich m&ouml;chte <strong>aktuelle Informationen</strong> von AboutLocal erhalten.
+					</label>
+				</div>
+				<div class="checkbox-box">
+					<input type="checkbox" name="rueckruf" id="rueckruf" value="yes">
+					<label for="rueckruf" class="checkboxLabel">
+						Ich m&ouml;chte <strong>einen R&uuml;ckruf</strong> von AboutLocal erhalten.
+					</label>
+				</div>
+				<div class="formular-zeile">
+					<label for="name">
+						Name
+					</label>
+					<span class="formular-feld">
+						<input type="text" name="name" id="name">
+					</span>
+				</div>
+				<div class="formular-zeile">
+					<label for="telefon">
+						Telefon
+					</label>
+					<span class="formular-feld">
+						<input type="text" name="telefon" id="telefon">
+					</span>
+				</div>
+				<div class="formular-zeile">
+					<label for="mail">
+						E-Mail
+					</label>
+					<span class="formular-feld">
+						<input type="text" name="mail" id="mail">
+					</span>
+				</div>
+				<div class="formular-zeile">
+					<label for="unternehmen">
+						Unternehmen
+					</label>
+					<span class="formular-feld">
+						<input type="text" id="unternehmen" name="unternehmen">
+					</span>
+				</div>
+				<button class="rueckrufButton button">
+					<div class="infoBild button-bild">
+						weitere Informationen anfordern
+					</div>
+				</button>
+			</div>  		
+  	</div>
+  </div>
+
+
+
+
+
 {{invokeAfterLoad}}
 </template>
 
