--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -24,11 +24,13 @@
 				 im lokalen Werbemarkt
 			 </h3>
 	-->
-			<button class="testzugang button">
-				<div class="haken button-bild">
-				Kostenlosen Testzugang anfordern
-				</div>
-			</button>
+			<a href="#" class="open-link">
+				<button class="testzugang button">
+					<div class="haken button-bild">
+						Kostenlosen Testzugang anfordern
+					</div>
+				</button>
+			</a>
 		</div>
 	</div>
 	<div class="functions grid-wrapper">
@@ -96,11 +98,10 @@
 		<h4>
 			Mit AboutLocal verstehen, wie sich lokale Unternehmen im Internet vermarkten!
 		</h4>
-		<button class="aktivwerden-button button">
-			<div class="haken button-bild">
-				Kostenlosen Testzugang anfordern
+		<a href="#" class="open-link">
+			<div class="aktivwerden-button">
 			</div>
-		</button>
+		</a>
   </div>
   
 
@@ -111,14 +112,15 @@
   </div>
   <div class="overlay-inner">
   	<div class="conversionbox-outer">
-			<img src="/img/close.png" alt="Close-Button" class="close">
+			<a href="#" class="close-link">
+				<img src="/img/close.png" alt="Close-Button" class="close">
+			</a>
 			<div class="whitebg conversion-header">
-
 				<h4 class="headline-conversionbox tel-icon">
 					Nehmen Sie Kontakt auf
 				</h4>
 			</div>
-			<div class="conversionbox-inner">  		
+			<form class="conversionbox-inner">  		
 				<div class="portrait-mark">
 					<img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
 					<br>
@@ -176,11 +178,17 @@
 						ja, ich m&ouml;chte aktuelle Informationen von AboutLocal erhalten.
 					</label>
 				</div>
-				<button class="rueckrufButton button">
-					<div class="rueckrufBild button-bild">
-						R&uuml;ckruf anfordern
-					</div>
-				</button>
+				<div class="abschicken-box">
+					<button class="rueckrufButton button">
+						<div class="rueckrufBild button-bild">
+							R&uuml;ckruf anfordern
+						</div>
+					</button>
+					<br>
+					<a href="#" class="close-link">
+						abbrechen
+					</a>
+				</div>
 			</div>  		
   	</div>
   </div>
