--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -70,11 +70,13 @@
 					Kundenbewertungen und Social Media Interaktion
 				</li>
 			</ul>
-			<button class="mehrInfo button">
-				<div class="infoBild button-bild">
-					weitere Informationen
-				</div>
-			</button>
+			<a href="#" class="open-link">
+				<button class="mehrInfo button">
+					<div class="infoBild button-bild">
+						weitere Informationen
+					</div>
+				</button>
+			</a>
 		</div>
 		<div class="screen-box">
 			<img src="img/tour/profile-screen.png" alt="Ausschnitt aus unseren Firmenprofilen">
@@ -102,11 +104,13 @@
 					Finden Sie einzelne Kunden durch unsere direkte Unternehmenssuche
 				</li>
 			</ul>
-			<button class="mehrInfo button">
-				<div class="infoBild button-bild">
-					weitere Informationen
-				</div>
-			</button>
+			<a href="#" class="open-link">
+				<button class="mehrInfo button">
+					<div class="infoBild button-bild">
+						weitere Informationen
+					</div>
+				</button>
+			</a>
 		</div>
 		<div class="screen-box">
 			<img src="img/tour/filter-screen.png" alt="Unsere Filterfunktion">
@@ -136,11 +140,13 @@
 					Export CSV-Datenformat f&uuml;r die schnelle Integration ins eigene CRM-System. Weitere Formate auf Anfrage!
 				</li>
 			</ul>
-			<button class="mehrInfo button">
-				<div class="infoBild button-bild">
-					weitere Informationen
-				</div>
-			</button>
+			<a href="#" class="open-link">
+				<button class="mehrInfo button">
+					<div class="infoBild button-bild">
+						weitere Informationen
+					</div>
+				</button>
+			</a>
 		</div>
 		<div class="screen-box">
 			<img src="img/tour/export-screen.png" alt="Export-Optionen">
@@ -174,11 +180,13 @@
 					Weitere Details wie Branchenzugeh&ouml;rigkeit und zus&auml;tzliche Angebotsinformationen
 				</li>
 			</ul>
-			<button class="mehrInfo button">
-				<div class="infoBild button-bild">
-					weitere Informationen
-				</div>
-			</button>
+			<a href="#" class="open-link">
+				<button class="mehrInfo button">
+					<div class="infoBild button-bild">
+						weitere Informationen
+					</div>
+				</button>
+			</a>
 		</div>
 		<div class="screen-box">
 			<img src="img/tour/deal-screen.png" alt="Gutschein-Daten als Exceldatei exportiert">
@@ -199,14 +207,15 @@
   </div>
   <div class="overlay-inner">
   	<div class="conversionbox-outer">
-			<img src="/img/close.png" alt="Close-Button" class="close">
+			<a href="#" class="close-link">
+				<img src="/img/close.png" alt="Close-Button" class="close">
+			</a>
 			<div class="whitebg conversion-header">
-
 				<h4 class="headline-conversionbox info-icon">
 					Fordern Sie weitere Informationen an
 				</h4>
 			</div>
-			<div class="conversionbox-inner">  		
+			<form class="conversionbox-inner">  		
 				<div class="checkbox-box">
 					<input type="checkbox" name="newsletter" id="newsletter" value="yes">
 					<label for="newsletter" class="checkboxLabel">
@@ -251,11 +260,17 @@
 						<input type="text" id="unternehmen" name="unternehmen">
 					</span>
 				</div>
-				<button class="rueckrufButton button">
-					<div class="infoBild button-bild">
-						weitere Informationen anfordern
-					</div>
-				</button>
+				<div class="abschicken-box">
+					<button class="rueckrufButton button">
+						<div class="infoBild button-bild">
+							weitere Informationen anfordern
+						</div>
+					</button>
+					<br>
+					<a href="#" class="close-link">
+						abbrechen
+					</a>
+				</div>
 			</div>  		
   	</div>
   </div>
