lightbox mit uebergang, partnerlogos angefangen

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -37,7 +37,7 @@
 		<ul>
 			<li>
 				<h4 class="headline-pfeil">
-					<span>
+					<span class="function-headline">
 					Streuverluste minimieren
 					</span>
 				</h4>
@@ -48,7 +48,7 @@
 			</li>
 			<li>
 				<h4 class="headline-kunden">
-					<span>
+					<span class="function-headline">
 					Ideale Kundenbetreuung
 					</span>
 				</h4>
@@ -59,7 +59,7 @@
 			</li>
 			<li class="lastItem">
 				<h4 class="headline-deal">
-					<span>
+					<span class="function-headline">
 						Deal-Special
 					<span class="aktion">
 						AKTION
@@ -79,17 +79,25 @@
   	</h3>
   </div>
   <div class="grid-wrapper graueLinie">
+  	<a href="http://www.seitwert.de/" class="seitwert-logo">
+    </a>
+  	<a href="http://www.w3scan.com/" class="adSearchEngine-logo">
+    </a>
+  	<a href="http://de.semrush.com/" class="semrush-logo">
+    </a>
   </div>
   <div class="grid-wrapper graueLinie">
 		<div class="portrait-container">
 			<img src="/img/mark.jpg" alt="Portrait" class="portrait">
 		</div>
-		<span class="zitat">
-			Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. 
+		<div class="zitat-box">
+			<span class="zitat">
+				Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. 
+			</span>
 			<span class="zitatautor">
 				Mark Reich
 			</span>
-		</span>
+		</div>
   </div>
   <div class="grid-wrapper aktiv-werden">
 	  <h3>
@@ -98,9 +106,7 @@
 		<h4>
 			Mit AboutLocal verstehen, wie sich lokale Unternehmen im Internet vermarkten!
 		</h4>
-		<a href="#" class="open-link">
-			<div class="aktivwerden-button">
-			</div>
+		<a href="#" class="open-link aktivwerden-button">
 		</a>
   </div>
   
@@ -112,84 +118,86 @@
   </div>
   <div class="overlay-inner">
   	<div class="conversionbox-outer">
-			<a href="#" class="close-link">
-				<img src="/img/close.png" alt="Close-Button" class="close">
-			</a>
-			<div class="whitebg conversion-header">
-				<h4 class="headline-conversionbox tel-icon">
-					Nehmen Sie Kontakt auf
-				</h4>
+			<div class="conversionbox">
+				<a href="#" class="close-link">
+					<img src="/img/close.png" alt="Close-Button" class="close">
+				</a>
+				<div class="whitebg conversion-header">
+					<h4 class="headline-conversionbox tel-icon">
+						Nehmen Sie Kontakt auf
+					</h4>
+				</div>
+				<form class="conversionbox-inner">  		
+					<div class="portrait-mark">
+						<img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
+						<br>
+						Mark Reich, Gr&uuml;nder
+					</div>
+					<div class="telefon">
+						<p class="zeile1">
+							Rufen Sie uns an
+						</p>				
+						<p class="telNr">
+							030 609 8448 - 11		
+						</p>		
+						<p class="zeile3">
+							Wir freuen uns auf Sie!
+						</p>				
+					</div>
+					<h4>
+						Oder fordern Sie einen R&uuml;ckruf an:
+					</h4>
+					<div class="formular-zeile">
+						<label for="name">
+							Name
+						</label>
+						<span class="formular-feld">
+							<input type="text" name="name" id="name">
+						</span>
+					</div>
+					<div class="formular-zeile">
+						<label for="telefon">
+							Telefon
+						</label>
+						<span class="formular-feld">
+							<input type="text" name="telefon" id="telefon">
+						</span>
+					</div>
+					<div class="formular-zeile">
+						<label for="mail">
+							E-Mail
+						</label>
+						<span class="formular-feld">
+							<input type="text" name="mail" id="mail">
+						</span>
+					</div>
+					<div class="formular-zeile">
+						<label for="unternehmen">
+							Unternehmen
+						</label>
+						<span class="formular-feld">
+							<input type="text" id="unternehmen" name="unternehmen">
+						</span>
+					</div>
+					<div class="newsletterbox">
+						<input type="checkbox" name="newsletter" id="newsletter" value="yes">
+						<label for="newsletter" class="newsletterLabel">
+							ja, ich m&ouml;chte aktuelle Informationen von AboutLocal erhalten.
+						</label>
+					</div>
+					<div class="abschicken-box">
+						<button class="rueckrufButton button">
+							<div class="rueckrufBild button-bild">
+								R&uuml;ckruf anfordern
+							</div>
+						</button>
+						<br>
+						<a href="#" class="close-link">
+							abbrechen
+						</a>
+					</div>
+				</form>  		
 			</div>
-			<form class="conversionbox-inner">  		
-				<div class="portrait-mark">
-					<img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
-					<br>
-					Mark Reich, Gr&uuml;nder
-				</div>
-				<div class="telefon">
-					<p class="zeile1">
-						Rufen Sie uns an
-					</p>				
-					<p class="telNr">
-						030 609 8448 - 11		
-					</p>		
-					<p class="zeile3">
-						Wir freuen uns auf Sie!
-					</p>				
-				</div>
-				<h4>
-					Oder fordern Sie einen R&uuml;ckruf an:
-				</h4>
-				<div class="formular-zeile">
-					<label for="name">
-						Name
-					</label>
-					<span class="formular-feld">
-						<input type="text" name="name" id="name">
-					</span>
-				</div>
-				<div class="formular-zeile">
-					<label for="telefon">
-						Telefon
-					</label>
-					<span class="formular-feld">
-						<input type="text" name="telefon" id="telefon">
-					</span>
-				</div>
-				<div class="formular-zeile">
-					<label for="mail">
-						E-Mail
-					</label>
-					<span class="formular-feld">
-						<input type="text" name="mail" id="mail">
-					</span>
-				</div>
-				<div class="formular-zeile">
-					<label for="unternehmen">
-						Unternehmen
-					</label>
-					<span class="formular-feld">
-						<input type="text" id="unternehmen" name="unternehmen">
-					</span>
-				</div>
-				<div class="newsletterbox">
-					<input type="checkbox" name="newsletter" id="newsletter" value="yes">
-					<label for="newsletter" class="newsletterLabel">
-						ja, ich m&ouml;chte aktuelle Informationen von AboutLocal erhalten.
-					</label>
-				</div>
-				<div class="abschicken-box">
-					<button class="rueckrufButton button">
-						<div class="rueckrufBild button-bild">
-							R&uuml;ckruf anfordern
-						</div>
-					</button>
-					<br>
-					<a href="#" class="close-link">
-						abbrechen
-					</a>
-				</div>
-			</div>  		
   	</div>
   </div>
 
