--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -9,7 +9,7 @@
 			<div class="ul-container">
 				<ul class="direktlinks">
 					&nbsp;
-					<a href="#" class="tour-slider">
+					<a href="#" class="tour-slider profile-slide">
 						&nbsp;
 						<li>
 							<img src="img/tour/marker.png" alt="Marker" class="marker">
@@ -17,21 +17,21 @@
 						</li>
 					</a>
 					&nbsp;
-					<a href="#" class="tour-slider">
+					<a href="#" class="tour-slider filter-slide">
 						&nbsp;
 						<li>
 						Filter
 						</li>
 					</a>
 					&nbsp;
-					<a href="#" class="tour-slider">
+					<a href="#" class="tour-slider export-slide">
 						&nbsp;
 						<li>
 						Export
 						</li>
 					</a>
 					&nbsp;
-					<a href="#" class="tour-slider">
+					<a href="#" class="tour-slider deal-slide">
 						&nbsp;
 						<li>
 							Gutschein-Daten
@@ -51,7 +51,8 @@
 		</div>
 	</div>
 <div class="slideshow grid-wrapper">
-	<div class="tour-seite grid-wrapper">
+  &nbsp;
+	<div class="tour-seite grid-wrapper profile-slide">
 		<div class="beschreibung-box">
 			<h2>
 				Ausf&uuml;hrliche Firmenprofile
@@ -85,7 +86,8 @@
 			</p>
 		</div>
 	</div>
-	<div class="tour-seite grid-wrapper">
+  &nbsp;
+	<div class="tour-seite grid-wrapper filter-slide">
 		<div class="beschreibung-box">
 			<h2>
 				Zahlreiche Such- und Filterm&ouml;glichkeiten
@@ -119,7 +121,8 @@
 			</p>
 		</div>
 	</div>
-	<div class="tour-seite grid-wrapper">
+  &nbsp;
+	<div class="tour-seite grid-wrapper export-slide">
 		<div class="beschreibung-box">
 			<h2>
 				Markierungs- und Export-
@@ -161,7 +164,8 @@
 			</p>
 		</div>
 	</div>
-	<div class="tour-seite grid-wrapper">
+  &nbsp;
+	<div class="tour-seite grid-wrapper deal-slide">
 		<div class="beschreibung-box">
 			<h2>
 				Gutschein-Daten Special
@@ -207,70 +211,72 @@
   </div>
   <div class="overlay-inner">
   	<div class="conversionbox-outer">
-			<a href="#" class="close-link">
-				<img src="/img/close.png" alt="Close-Button" class="close">
-			</a>
-			<div class="whitebg conversion-header">
-				<h4 class="headline-conversionbox info-icon">
-					Fordern Sie weitere Informationen an
-				</h4>
-			</div>
-			<form class="conversionbox-inner">  		
-				<div class="checkbox-box">
-					<input type="checkbox" name="newsletter" id="newsletter" value="yes">
-					<label for="newsletter" class="checkboxLabel">
-						Ich m&ouml;chte <strong>aktuelle Informationen</strong> von AboutLocal erhalten.
-					</label>
+			<div class="conversionbox">
+				<a href="#" class="close-link">
+					<img src="/img/close.png" alt="Close-Button" class="close">
+				</a>
+				<div class="whitebg conversion-header">
+					<h4 class="headline-conversionbox info-icon">
+						Fordern Sie weitere Informationen an
+					</h4>
 				</div>
-				<div class="checkbox-box">
-					<input type="checkbox" name="rueckruf" id="rueckruf" value="yes">
-					<label for="rueckruf" class="checkboxLabel">
-						Ich m&ouml;chte <strong>einen R&uuml;ckruf</strong> von AboutLocal erhalten.
-					</label>
-				</div>
-				<div class="formular-zeile">
-					<label for="name">
-						Name
-					</label>
-					<span class="formular-feld">
-						<input type="text" name="name" id="name">
-					</span>
-				</div>
-				<div class="formular-zeile">
-					<label for="telefon">
-						Telefon
-					</label>
-					<span class="formular-feld">
-						<input type="text" name="telefon" id="telefon">
-					</span>
-				</div>
-				<div class="formular-zeile">
-					<label for="mail">
-						E-Mail
-					</label>
-					<span class="formular-feld">
-						<input type="text" name="mail" id="mail">
-					</span>
-				</div>
-				<div class="formular-zeile">
-					<label for="unternehmen">
-						Unternehmen
-					</label>
-					<span class="formular-feld">
-						<input type="text" id="unternehmen" name="unternehmen">
-					</span>
-				</div>
-				<div class="abschicken-box">
-					<button class="rueckrufButton button">
-						<div class="infoBild button-bild">
-							weitere Informationen anfordern
-						</div>
-					</button>
-					<br>
-					<a href="#" class="close-link">
-						abbrechen
-					</a>
-				</div>
+				<form class="conversionbox-inner">  		
+					<div class="checkbox-box">
+						<input type="checkbox" name="newsletter" id="newsletter" value="yes">
+						<label for="newsletter" class="checkboxLabel">
+							Ich m&ouml;chte <strong>aktuelle Informationen</strong> von AboutLocal erhalten.
+						</label>
+					</div>
+					<div class="checkbox-box">
+						<input type="checkbox" name="rueckruf" id="rueckruf" value="yes" checked="checked">
+						<label for="rueckruf" class="checkboxLabel">
+							Ich m&ouml;chte <strong>einen R&uuml;ckruf</strong> von AboutLocal erhalten.
+						</label>
+					</div>
+					<div class="formular-zeile">
+						<label for="name">
+							Name
+						</label>
+						<span class="formular-feld">
+							<input type="text" name="name" id="name">
+						</span>
+					</div>
+					<div class="formular-zeile">
+						<label for="telefon">
+							Telefon
+						</label>
+						<span class="formular-feld">
+							<input type="text" name="telefon" id="telefon">
+						</span>
+					</div>
+					<div class="formular-zeile">
+						<label for="mail">
+							E-Mail
+						</label>
+						<span class="formular-feld">
+							<input type="text" name="mail" id="mail">
+						</span>
+					</div>
+					<div class="formular-zeile">
+						<label for="unternehmen">
+							Unternehmen
+						</label>
+						<span class="formular-feld">
+							<input type="text" id="unternehmen" name="unternehmen">
+						</span>
+					</div>
+					<div class="abschicken-box">
+						<button class="rueckrufButton button">
+							<div class="infoBild button-bild">
+								weitere Informationen anfordern
+							</div>
+						</button>
+						<br>
+						<a href="#" class="close-link">
+							abbrechen
+						</a>
+					</div>
+				</form>
 			</div>  		
   	</div>
   </div>
