--- a/sphere.styl
+++ b/sphere.styl
@@ -969,9 +969,10 @@ myGray4 = #cacbcc
 	h4
 		font-size 19px
 		height lines3
-		padding-left cols1
+		padding-left 45px
+		font-weight semibold
 
-		span:not(.aktion)
+		.function-headline
 			padding-top line
 			display block
 		
@@ -1015,11 +1016,40 @@ myGray4 = #cacbcc
 		strong
 			font-weight semibold
 
+.seitwert-logo
+	background transparent no-repeat top left
+	height 49px
+	width 169px
+	display inline-block
+	background-image url('/img/homepage/partner-logos.png')
+	
+	&:hover
+		background-position 0 -65px
+	
+.adSearchEngine-logo
+	background transparent no-repeat top left
+	height 49px
+	width 169px
+	display inline-block
+	background-image url('/img/homepage/partner-logos.png')
+	
+	&:hover
+		background-position 0 -65px
+	
+.seitwert-logo
+	background transparent no-repeat top left
+	height 49px
+	width 169px
+	display inline-block
+	background-image url('/img/homepage/partner-logos.png')
+	
+	&:hover
+		background-position 0 -65px
+	
 .graueLinie
 	padding-top ( line-height - 1 ) px
 	padding-bottom line
 	border-bottom 1px solid myGray4
-	
 	
 	.portrait
 		padding 4px
@@ -1030,14 +1060,17 @@ myGray4 = #cacbcc
 		display inline-block
 		vertical-align middle
 	
-	.zitat
+	.zitat-box
+		display inline-block
+		vertical-align middle
 		width cols10
-		font-size 25px
+		line-height 30px
+		
+	
+	.zitat
+		font-size 23px
 		font-style italic
 		font-weight light
-		vertical-align middle
-		display inline-block
-		line-height 25px
 		&:before
 			content "»"
 		&:after
@@ -1047,8 +1080,11 @@ myGray4 = #cacbcc
 		font-size 14px
 		font-style normal
 		color gray1
-		float right
+		//float right
 		font-weight 500
+		//position absolute
+		padding-left 10px
+		display inline-block
 
 .aktiv-werden
 	text-align center
@@ -1070,25 +1106,38 @@ myGray4 = #cacbcc
 	.aktivwerden-button
 		background transparent no-repeat top left
 		height 58px
-		width 600px
+		width 596px
 		display inline-block
 		background-image url('/img/homepage/button.png')
 		
 		&:hover
-			background-image url('/img/homepage/button-hover.png')
+			background-position 0 -58px
+				
+		&:active
+			background-position 0 -116px
 				
 
+overlay-duration = 0.2s
 .overlay-outer
 	background-color #000
 	position fixed
-	opacity .5
-	filter unquote('Alpha(opacity=50)')
+	//opacity .5
+	//filter unquote('Alpha(opacity=50)')
 	top 0
 	left 0
 	width 100%
-	height 100%
 	z-index 100
-	display none
+	transition opacity overlay-duration ease 0s, height 0s ease overlay-duration
+	opacity 0
+	filter unquote('Alpha(opacity=0)')
+	height 0%
+	
+	&.visible
+		opacity .5
+		filter unquote('Alpha(opacity=50)')
+		height 100%
+		transition opacity overlay-duration ease 0s, height 0s ease 0s
+		
 
 .overlay-inner
 	z-index 101
@@ -1096,19 +1145,29 @@ myGray4 = #cacbcc
 	top 0
 	left 0
 	width 100%
-	height 100%
+	height 0px
 	text-align center
-	display none
+	//display none
+	display block
+	margin-top -800px
+	transition margin-top overlay-duration
+
+	&.visible
+		margin-top 0px
 
 .conversionbox-outer
 	border-radius 6px 6px 6px 6px
-	border solid 8px #47494b
-	background-color white
+	border solid 8px rgba(31,33,35,0.7)
 	display inline-block
 	text-align left
 	margin-top lines5
 	width ( 7 * (column + gutter) ) px
+
+.conversionbox
+	background-color white
+	display inline-block
 	background-color:#f8f8f8;
+	width ( 7 * (column + gutter) ) px
 	
 	.close
 		float right
