2 Zitate, Kontaktseite, Aktion fuer Rueckrufanforderung

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -78,27 +78,50 @@
   		Ausgew&auml;hlte <strong>Innovationspartner</strong>
   	</h3>
   </div>
-  <div class="grid-wrapper graueLinie">
-  	<a href="http://www.seitwert.de/" class="seitwert-logo">
+
+  <div class="grid-wrapper graueLinie partner-box">
+  	<a href="http://www.seitwert.de/" target="_blank" class="seitwert-logo partner-link">
     </a>
-  	<a href="http://www.w3scan.com/" class="adSearchEngine-logo">
+  	<a href="http://www.w3scan.com/" target="_blank" class="adSearchEngine-logo partner-link">
     </a>
-  	<a href="http://de.semrush.com/" class="semrush-logo">
+  	<a href="http://de.semrush.com/" target="_blank" class="semrush-logo partner-link">
     </a>
   </div>
-  <div class="grid-wrapper graueLinie">
-		<div class="portrait-container">
-			<img src="/img/mark.jpg" alt="Portrait" class="portrait">
-		</div>
-		<div class="zitat-box">
-			<span class="zitat">
-				Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. Ein Zitat ueber aboutLocal. 
-			</span>
-			<span class="zitatautor">
-				Mark Reich
-			</span>
-		</div>
+  <div class="grid-wrapper zitat-slideshow">
+    <div class="grid-wrapper graueLinie">
+		  <div class="portrait-container">
+			  <img src="/img/homepage/favorit.png" alt="favor.it-Logo" class="portrait">
+		  </div>
+		  <div class="zitat-box">
+			  <span class="zitat">
+				  Im lokalen Werbemarkt ist der Vertriebsaufwand eine der gro&szlig;en H&uuml;rden f&uuml;r innovative Startups. Um unsere Ressourcen m&ouml;glichst effizient einzusetzen bauen wir auf qualifizierte Leads von AboutLocal!
+			  </span>
+			  <span class="zitatautor">
+				  David Federhen, Co-Gr&uuml;nder von 
+				  <a href="http://favor.it/" target="_blank">
+				    favor.it
+				  </a>
+			  </span>
+		  </div>
+    </div>
+    <div class="grid-wrapper graueLinie">
+		  <div class="portrait-container">
+			  <img src="/img/homepage/rp-online.png" alt="RP-Online-Logo" class="portrait">
+		  </div>
+		  <div class="zitat-box">
+			  <span class="zitat">
+				  AboutLocal schlie&szlig;t mit seinem Angebot eine gro&szlig;e L&uuml;cke. Wir sehen darin das Potential, Transparenz im lokalen Online-Markt zu bekommen, sowie den Vertrieb von Werbeleistungen an lokale Unternehmen zu optimieren.
+			  </span>
+			  <span class="zitatautor">
+				  Oliver Horst, Gesch&auml;ftsf&uuml;hrer 
+				  <a href="http://www.rp-online.de/" target="_blank">
+				    RP Online
+				  </a>
+			  </span>
+		  </div>
+    </div>
   </div>
+
   <div class="grid-wrapper aktiv-werden">
 	  <h3>
 	  	Jetzt <strong>aktiv werden</strong>
@@ -110,10 +133,6 @@
 		</a>
   </div>
   
-
-
-
-
   <div class="overlay-outer">
   </div>
   <div class="overlay-inner">
@@ -128,7 +147,7 @@
 					</h4>
 				</div>
 				<form class="conversionbox-inner">  		
-					<div class="portrait-mark">
+					<div class="portrait-mark portrait-mark-formular">
 						<img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
 						<br>
 						Mark Reich, Gr&uuml;nder
@@ -200,9 +219,32 @@
 			</div>
   	</div>
   </div>
-
-
-
   
-  
+  <div class="overlay-inner">
+  	<div class="conversionbox-outer">
+			<div class="conversionbox">
+				<a href="#" class="close-link">
+					<img src="/img/close.png" alt="Close-Button" class="close">
+				</a>
+				<div class="whitebg conversion-header">
+					<h4 class="headline-conversionbox tel-icon">
+						Nehmen Sie Kontakt auf
+					</h4>
+				</div>
+				<div class="conversionbox-inner">  		
+          <h2>
+            Vielen Dank f&uuml;r ihre Anfrage!
+          </h2>
+          Ihre Nachricht ist bei uns eingegangen. Wir werden uns schnellstm&ouml;glich bei Ihnen melden.
+					<div class="portrait-mark">
+						<img src="/img/mark.jpg" alt="Portrait Mark Reich" class="photo-mark">
+						<br>
+						Mark Reich, Gr&uuml;nder
+					</div>
+				</div>  		
+			</div>
+  	</div>
+  </div>
+
+{{invokeAfterLoad}}  
 </template>
