routing and links

--- a/client/views/navigation/navigation.html
+++ b/client/views/navigation/navigation.html
@@ -4,10 +4,10 @@
       <img class="logo" src="/img/logo-top.gif">
       {{> navCurrentGroup}}
       <ul class="nav-right">
-        <li class="tour">Tour</li>
-        <li class="home">Home</li>
+        <li class="tour"><a href="/tour">Tour</a></li>
+        <li class="home"><a href="/">Home</a></li>
         <li class="login">
-        <a>Login</a>
+          <a>Login</a>
         </li>
       </ul>
       {{> loginForm}}
